# xnat-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  Dockerfile  README.md  README.rst  env.sh  index.html  mkdocs-template.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.txt
${VERSION}/: 404.html  index.html
${VERSION}/bids_postprocess/: index.html
${VERSION}/changelog/: index.html
${VERSION}/code_standards/: index.html
${VERSION}/dev_setup/: index.html
${VERSION}/dicom_export/: index.html
${VERSION}/installation/: index.html
${VERSION}/run_heudiconv/: index.html
${VERSION}/search/: search_index.json
${VERSION}/usage_overview/: index.html
${VERSION}/xnat2bids/: index.html
.github/workflows/: bump-dry-run.yml  deploy_dev_docs.yml  deploy_docs.yml  dev-docs.yml  dockerimage.yml  pre-commit.yml  publish.yml  replace-docs.yml  tests.yml
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/bids_postprocess/: index.html
0.1.7/changelog/: index.html
0.1.7/code_standards/: index.html
0.1.7/dev_setup/: index.html
0.1.7/dicom_export/: index.html
0.1.7/installation/: index.html
0.1.7/run_heudiconv/: index.html
0.1.7/usage_overview/: index.html
0.1.7/xnat2bids/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/bids_postprocess/: index.html
0.2.0/code_standards/: index.html
0.2.0/contributing/: index.html
0.2.0/dev_setup/: index.html
0.2.0/dicom_export/: index.html
0.2.0/installation/: index.html
0.2.0/run_heudiconv/: index.html
0.2.0/usage_overview/: index.html
0.2.0/xnat2bids/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/bids_postprocess/: index.html
0.2.1/dev_setup/: index.html
0.2.1/usage_overview/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/bids_postprocess/: index.html
1.0.0/changelog/: index.html
1.0.0/code_standards/: index.html
1.0.0/dev_setup/: index.html
1.0.0/dicom_export/: index.html
1.0.0/installation/: index.html
1.0.0/run_heudiconv/: index.html
1.0.0/search/: search_index.json
1.0.0/usage_overview/: index.html
1.0.0/xnat2bids/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/bids_postprocess/: index.html
1.0.1/changelog/: index.html
1.0.1/code_standards/: index.html
1.0.1/dev_setup/: index.html
1.0.10/: 404.html  index.html  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.5/: 404.html  index.html
1.0.6/: 404.html  index.html  sitemap.xml
1.0.7/: 404.html  index.html  sitemap.xml
1.0.8/: 404.html  index.html  sitemap.xml
1.0.9/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html
1.1.1/: 404.html  index.html
1.2.0/: 404.html  index.html
1.2.1/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.4.0/: 404.html  index.html  sitemap.xml
1.4.1/: 404.html  index.html
1.5.0/: 404.html  index.html  sitemap.xml
1.6.0/: 404.html  index.html  sitemap.xml
1.6.1/: 404.html  index.html  sitemap.xml
1.6.2/: 404.html  index.html  sitemap.xml
1.6.3/: 404.html  index.html  sitemap.xml
1.7.0/: 404.html  index.html  sitemap.xml
1.7.1/: 404.html  index.html  sitemap.xml
1.7.2/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.1/: 404.html  index.html  objects.inv  sitemap.xml
2.1.2/: 404.html  index.html  objects.inv  sitemap.xml
2.2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.3.0/: 404.html  index.html  objects.inv  sitemap.xml
bids_postprocess/: index.html
bidsmaps/: XNAT2_E00002.json
code_standards/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev_setup/: index.html
dicom_export/: index.html
docs/: bids_postprocess.md  changelog.md  code_standards.md  dev_setup.md  dicom_export.md  index.md  installation.md  interface.md  run_heudiconv.md  run_local.md  usage_overview.md  version_selection.md  xnat2bids.md
installation/: index.html
run_heudiconv/: index.html
search/: search_index.json
tests/: demodat_bidsmap.json  dicom_fix_config_invalid_value.json  sanes_sadlum.json  test_postprocessing.py  test_run_plus.py  test_xnat2bids.py  test_xnat_tools.py
usage_overview/: index.html
xnat2bids/: index.html
xnat_tools/: __init__.py  bids_postprocess.py  bids_utils.py  dcm2bids.py  dicom_export.py  logging.py  physio_convert.py  run_bids_validator.py  run_heudiconv.py  xnat2bids.py  xnat2bids_typer.py  xnat_utils.py
(+300 files in other folders)
