[project]
name = "xnat-tools"
version = "2.1.0"
description = ""
authors = [{ name = "Isabel Restrepo", email = "isabelrestre@gmail.com" }]
requires-python = "~=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "heudiconv==1.3.3",
    "pydicom==3.0.1",        
    "pytest-mock>=3.8.2",
    "six>=1.16.0",
    "typer>=0.15.2",
    "isort>=6.0.1",         
    "mne-bids==0.16.0",
    "pandas>=2.2.2"         
]

[project.scripts]
xnat2bids = "xnat_tools.xnat2bids:main"

[project.optional-dependencies]
dev = [
    "black>=22.6.0,<23",
    "commitizen>=2.31.0,<3",
    "flake8>=5.0.4,<6",
    "mypy>=1.5.1,<2",
    "pre-commit>=2.20.0,<3",
    "pytest>=7.1.2,<8",
    "python-dotenv>=0.20.0,<0.21",
    "responses>=0.21.0,<0.22",
    "pandas-stubs>=2.0.1.230501,<3"
]

docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=0.23,<1",
    "mkdocs-versioning>=0.4,<1",
    "mkdocs-markdownextradata-plugin>=0.2,<1"
]

[tool.setuptools]
packages = ["xnat_tools"]

[tool.commitizen]
version = "2.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "xnat_tools/__init__.py"
]

[tool.flake8]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.git
  | \.vscode
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | site
)/
'''

[tool.isort]
line_length = 100
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
known_third_party = [ "pytest"]